force-app/main/default/objects/Messages__c/Messages__c.object-meta.xml
<CustomObject>
    <label>Message</label>
    <nameField>
        <label>Messages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>