force-app/main/default/objects/Messages__c/fields/Comment_Text__c.field-meta.xml
<CustomField>
    <fullName>Comment_Text__c</fullName>
    <label>Comment Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>