force-app/main/default/objects/Messages__c/fields/From_User__c.field-meta.xml
<CustomField>
    <fullName>From_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>