force-app/main/default/objects/Messages__c/fields/To_User__c.field-meta.xml
<CustomField>
    <fullName>To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Messages1</relationshipName>
    <type>Lookup</type>
</CustomField>